Fix sideways header for navbar and refactor spacing with CSS grid area

--- a/public/scss/title.scss
+++ b/public/scss/title.scss
@@ -4,13 +4,25 @@
     position: fixed;
     box-sizing: border-box;
     background-color: variables.$titleBase;
-    border-right: 1px solid #472957;
-    width: 80px;
-    height: 100vh;
+    border-top: 1px solid #472957;
     z-index: 100;
+
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-areas: 
+      "nav-icon about-me . linkedin-icon";
+    grid-template-columns: 80px 1fr 3fr;
+    gap: 1.5em;
+    align-items: center;
+
+    /* Vertical navigation */
+    width: 100vh;
+    transform-origin: 0 100%;
+    transform: translateY(-100%) rotate(90deg);
 }
 
 .navbar-icon {
+    grid-area: nav-icon;
     box-sizing: border-box;
     background-color: #513886;
     width: 80px;
@@ -18,13 +30,15 @@
 }
 
 .aboutme-text {
+    grid-area: about-me;
+    cursor: pointer;
     font-weight: 400;
     font-size: 1.3em;
     color: variables.$titleText;
 }
 
 .linkedin-icon {
-    position: absolute;
+    grid-area: linkedin-icon;
     bottom: 0;
     box-sizing: border-box;
     background-color: #513886;
